# MEGAchat

./: CMakeLists.txt
cmake/: genDbSchema.cmake
examples/qt/: CMakeLists.txt  callGui.h  callGui.ui  chatWindow.cpp  chatWindow.h  main.cpp  mainwindow.cpp  mainwindow.h
src/: CMakeLists.txt  IApp.h  chatClient.cpp  chatClient.h  chatd.cpp  chatd.h  chatdICrypto.h  chatdMsg.h  karereCommon.cpp  karereCommon.h  megachatapi_impl.cpp  megachatapi_impl.h  presenced.cpp  presenced.h  sdkApi.h  serverListProvider.h  videoRenderer_Qt.h  websockConn.cpp  websockConn.h
src/base/: CMakeLists.txt  appCtx.cpp  appCtx.h  asyncTools.h  gcmpp.h  retryHandler.h  services-config.h.in  trackDelete.h
src/base/waiter/: libuvWaiter.cpp
src/chatd/: chatd.cpp  chatd.h  chatdICrypto.h
src/net/: libwebsocketsIO.cpp  libwebsocketsIO.h  libwsIO.cpp  websocketsIO.cpp  websocketsIO.h  wsIO-libwebsockets.cpp  wsIO-libwebsockets.h  wsIO-libws.h  wsIO.cpp  wsIO.h
src/rtcModule/: CMakeLists.txt  IVideoRenderer.h  rtcStats.cpp  rtcStats.h  streamPlayer.h  webrtc.cpp  webrtc.h  webrtcAdapter.cpp  webrtcAdapter.h  webrtcAsyncWaiter.h  webrtcPrivate.h
src/strongvelope/: strongvelope.cpp  strongvelope.h
src/waiter/: karereWaiter.cpp  karereWaiter.h  libuvWaiter.cpp  libuvWaiter.h
tests/sdk_test/: CMakeLists.txt  sdk_test.cpp
webrtc-build/: CMakeLists.txt  base.gyp.patch  build-webrtc.sh  chromium-deps-del.txt  get-chromium-deps.sh  remove-from-DEPS.py  third-party-deps.txt
